####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ball01.png ball02.png ball03.png ball04.png ball05.png ball06.png ball07.png ball08.png ball09.png ball10.png ball11.png ball12.png ball13.png ball14.png ball15.png whiteball.png ball01b.png ball02b.png ball03b.png ball04b.png ball05b.png ball06b.png ball07b.png ball08b.png ball09b.png ball10b.png ball11b.png ball12b.png ball13b.png ball14b.png ball15b.png ball_shadow.png ball_shadowb.png 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball01.png $(kde_datadir)/kbilliards/balls/ball01.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball02.png $(kde_datadir)/kbilliards/balls/ball02.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball03.png $(kde_datadir)/kbilliards/balls/ball03.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball04.png $(kde_datadir)/kbilliards/balls/ball04.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball05.png $(kde_datadir)/kbilliards/balls/ball05.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball06.png $(kde_datadir)/kbilliards/balls/ball06.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball07.png $(kde_datadir)/kbilliards/balls/ball07.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball08.png $(kde_datadir)/kbilliards/balls/ball08.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball09.png $(kde_datadir)/kbilliards/balls/ball09.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball10.png $(kde_datadir)/kbilliards/balls/ball10.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball11.png $(kde_datadir)/kbilliards/balls/ball11.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball12.png $(kde_datadir)/kbilliards/balls/ball12.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball13.png $(kde_datadir)/kbilliards/balls/ball13.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball14.png $(kde_datadir)/kbilliards/balls/ball14.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball15.png $(kde_datadir)/kbilliards/balls/ball15.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/whiteball.png $(kde_datadir)/kbilliards/balls/whiteball.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball01b.png $(kde_datadir)/kbilliards/balls/ball01b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball02b.png $(kde_datadir)/kbilliards/balls/ball02b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball03b.png $(kde_datadir)/kbilliards/balls/ball03b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball04b.png $(kde_datadir)/kbilliards/balls/ball04b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball05b.png $(kde_datadir)/kbilliards/balls/ball05b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball06b.png $(kde_datadir)/kbilliards/balls/ball06b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball07b.png $(kde_datadir)/kbilliards/balls/ball07b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball08b.png $(kde_datadir)/kbilliards/balls/ball08b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball09b.png $(kde_datadir)/kbilliards/balls/ball09b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball10b.png $(kde_datadir)/kbilliards/balls/ball10b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball11b.png $(kde_datadir)/kbilliards/balls/ball11b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball12b.png $(kde_datadir)/kbilliards/balls/ball12b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball13b.png $(kde_datadir)/kbilliards/balls/ball13b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball14b.png $(kde_datadir)/kbilliards/balls/ball14b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball15b.png $(kde_datadir)/kbilliards/balls/ball15b.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball_shadow.png $(kde_datadir)/kbilliards/balls/ball_shadow.png
	$(mkinstalldirs) $(kde_datadir)/kbilliards/balls/
	$(INSTALL_DATA) $(srcdir)/ball_shadowb.png $(kde_datadir)/kbilliards/balls/ball_shadowb.png

uninstall-local:
	-rm -f $(kde_datadir)/kbilliards/balls/ball01.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball02.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball03.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball04.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball05.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball06.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball07.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball08.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball09.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball10.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball11.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball12.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball13.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball14.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball15.png
	-rm -f $(kde_datadir)/kbilliards/balls/whiteball.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball01b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball02b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball03b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball04b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball05b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball06b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball07b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball08b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball09b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball10b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball11b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball12b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball13b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball14b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball15b.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball_shadow.png
	-rm -f $(kde_datadir)/kbilliards/balls/ball_shadowb.png

####### kdevelop will overwrite this part!!! (end)############
