####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = kbilliards2004.kbm

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kbilliards/maps/
	$(INSTALL_DATA) $(srcdir)/kbilliards2004.kbm $(kde_datadir)/kbilliards/maps/kbilliards2004.kbm

uninstall-local:
	-rm -f $(kde_datadir)/kbilliards/maps/kbilliards2004.kbm

####### kdevelop will overwrite this part!!! (end)############

