####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ball.png rightarrow.png leftarrow.png numbers.png

install-data-local:
	$(mkinstalldirs) $(DESTDIR)$(kde_datadir)/kbilliards/
	$(INSTALL_DATA) $(srcdir)/*.png $(DESTDIR)$(kde_datadir)/kbilliards/


uninstall-local:
	-rm -f $(DESTDIR)$(kde_datadir)/kbilliards/*.png


####### kdevelop will overwrite this part!!! (end)############
