####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = ballinhole.wav hitball.wav hitedge.wav gameover.wav music01.ogg applause.wav shot.wav 

install-data-local:
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/ballinhole.wav $(kde_datadir)/kbilliards/sound/ballinhole.wav
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/hitball.wav $(kde_datadir)/kbilliards/sound/hitball.wav
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/hitedge.wav $(kde_datadir)/kbilliards/sound/hitedge.wav
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/gameover.wav $(kde_datadir)/kbilliards/sound/gameover.wav
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/music01.ogg $(kde_datadir)/kbilliards/sound/music01.ogg
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/applause.wav $(kde_datadir)/kbilliards/sound/applause.wav
	$(mkinstalldirs) $(kde_datadir)/kbilliards/sound/
	$(INSTALL_DATA) $(srcdir)/shot.wav $(kde_datadir)/kbilliards/sound/shot.wav

uninstall-local:
	-rm -f $(kde_datadir)/kbilliards/sound/ballinhole.wav
	-rm -f $(kde_datadir)/kbilliards/sound/hitball.wav
	-rm -f $(kde_datadir)/kbilliards/sound/hitedge.wav
	-rm -f $(kde_datadir)/kbilliards/sound/gameover.wav
	-rm -f $(kde_datadir)/kbilliards/sound/music01.ogg
	-rm -f $(kde_datadir)/kbilliards/sound/applause.wav
	-rm -f $(kde_datadir)/kbilliards/sound/shot.wav

####### kdevelop will overwrite this part!!! (end)############

